src/test/deca/context/invalid/object/voidField.deca
class X
{
  int a;
}
class A
{
  void a(int a) asm ("a");
}

class B extends A
{
  B c = new B();
  void a;
}
